Don't use a linewrap - Fixes issues in NVDA and VoiceOver
- NVDA would, in some situations, read text without spaces when contained in a 1px-wide element
- VoiceOver would read word-by-word when in a 1px-wide element
- By making it not wrap, but still overflow, both are able to read text without any issues

--- a/offscreen.scss
+++ b/offscreen.scss
@@ -8,6 +8,7 @@
 	overflow: hidden;
 	width: 1px;
 	height: 1px;
+	white-space: nowrap;
 
 	[dir="rtl"] & {
 		left: auto;
